--- a/src/components/ShoppingCart.module.css
+++ b/src/components/ShoppingCart.module.css
@@ -12,7 +12,8 @@
     padding: 10px;
     width: 140px;
     text-align: left;
-    z-index: 999;
+    z-index: 999; 
+    /* define overlapping item, larger show first */
 }
 
 .cartDropDown ul{
@@ -23,7 +24,8 @@
 
 .cartDropDown li {
     border-bottom: 1px solid #ccc;
-    padding: 5px 0;
+    padding: 5px 0; 
+    /*  5 0 5 0 */
 }
 
 .cartDropDown li:last-child {
@@ -41,5 +43,5 @@
 }
 
 .button svg{
-    margin: 0 5px 0 0 ;
+    margin: 0 5px 0 0;
 }
