--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,47 +1,20 @@
-.App {
-  text-align: center;
-  justify-content: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body,html{
+  background-color: #f4debe;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .app{
   text-align: center;
   justify-content: center;
+  background-color: #f4debe;
 }
+
+
 .appHeader{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: 36px;
+  margin-top: 40px;
   margin-bottom: 24px;
 
 }
@@ -63,16 +36,25 @@
   }
 }
 
-
 .robotList{
+  margin-left: 15px;
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content:flex-start;
-  align-content: flex-start;
+  align-content: space-around;
   list-style-type: none;
   
 }
 
+Button{
+  background-color: #f5aa5f;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.appHeader > h1{
+  font-family: 'DotGothic16', cursive;
+}
